@@ -26,7 +26,6 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.nio.file.Files;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.lecturestudio.core.ExecutableBase;
 import org.lecturestudio.core.ExecutableException;
@@ -171,8 +170,10 @@ public class PdfDocumentRenderer extends ExecutableBase {
 			Document newDocument = new Document();
 			newDocument.setTitle(FileUtils.stripExtension(outputFile.getName()));
 
-			int pageCount = documents.stream().mapToInt(Document::getPageCount).sum();
 			int pagesWritten = 0;
+			long pageCount = pages.stream()
+					.filter(page -> documents.contains(page.getDocument()))
+					.count();
 			float pageStep = 1.f / pageCount;
 
 			for (Page page : pages) {
@@ -278,7 +279,7 @@ public class PdfDocumentRenderer extends ExecutableBase {
 			// Create additional binary encoded shape stream.
 			List<Shape> shapes = page.getShapes().stream()
 					.filter(shape -> renderService.hasRenderer(shape.getClass()))
-					.collect(Collectors.toList());
+					.toList();
 
 			pdfDocument.createEditableAnnotationStream(pageIndex, shapes);
 		}
